# GitAI

./: .env.example  .gitignore  PROGRESS.md  README.md  ai_git_desktop_codex_spec.md  main.py  pyproject.toml  requirements.txt
app/: cli.py
app/controllers/: assistant_controller.py
app/ui/: cli.py
app/ui/desktop/: __init__.py  app.py  main_window.py
core/action_router/: route_action.py
core/ai_service/: __init__.py  service.py
core/command_parser/: models.py  parse_command.py
core/git_engine/: service.py
core/github_service/: service.py
tests/: test_ai_parsing.py  test_parse_command.py
